# structured_light_ros

./: CMakeLists.txt  README.md  color_image_listy_decode_list.txt  gray_picture_List.txt  package.xml  plotcloud.py
calibration/: camera_data.yml  extrinsics.yml  intrinsics.yml  monitor_point.txt  monitor_point.yml  proj_data.yml
color_image_list/: raw_image_list.txt  x_decode_list.txt  y_decode_list.txt
gray_decode/: x.exr  y.exr
hamming_decoded/color_decoded/: cam_00_x.exr  cam_00_y.exr  cam_03_x.exr  cam_03_y.exr  cam_06_x.exr  cam_06_y.exr  cam_09_x.exr  cam_09_y.exr  cam_12_x.exr  cam_12_y.exr  cam_15_x.exr  cam_15_y.exr  cam_18_x.exr  cam_18_y.exr  cam_21_x.exr  cam_21_y.exr  cam_24_x.exr  cam_24_y.exr  cam_27_x.exr  cam_27_y.exr  cam_30_x.exr  cam_30_y.exr  cam_33_x.exr  cam_33_y.exr  cam_36_x.exr  cam_36_y.exr  cam_39_x.exr  cam_39_y.exr  cam_42_x.exr  cam_42_y.exr  cam_45_x.exr  cam_45_y.exr  cam_48_x.exr  cam_48_y.exr  cam_51_x.exr  cam_51_y.exr  cam_54_x.exr  cam_54_y.exr  cam_57_x.exr  cam_57_y.exr  (+6 more)
scripts/: hamming_decode.py
src/: color_capture.cpp  gray_capture.cpp  gray_decode.cpp  main_projcalib.cpp  mirror_calibration.py  triangulation.cpp
